WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98830
[BlackBerry] NetworkJob missing m_frame checks
https://bugs.webkit.org/show_bug.cgi?id=98830
Summary
[BlackBerry] NetworkJob missing m_frame checks
Joe Mason
Reported
2012-10-09 15:46:20 PDT
m_frame can be null, and m_frame->page() can return null. There are a few places in NetworkJob that don't check for this.
Attachments
fix
(2.81 KB, patch)
2012-10-09 15:50 PDT
,
Joe Mason
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joe Mason
Comment 1
2012-10-09 15:50:13 PDT
Created
attachment 167868
[details]
fix
WebKit Review Bot
Comment 2
2012-10-09 18:23:07 PDT
Comment on
attachment 167868
[details]
fix Clearing flags on attachment: 167868 Committed
r130834
: <
http://trac.webkit.org/changeset/130834
>
WebKit Review Bot
Comment 3
2012-10-09 18:23:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug