Check for null m_frame in NetworkJob https://bugs.webkit.org/show_bug.cgi?id=98830

Patch by Joe Mason <jmason@rim.com> on 2012-10-09
Reviewed by George Staikos.

PR 220025

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::sendRequestWithCredentials):
(WebCore::NetworkJob::storeCredentials):

Canonical link: https://commits.webkit.org/116818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130834 268f45cc-cd09-0410-ab3c-d52691b4dbfc